fix html overlap + cut off line graph at 2016

--- a/css/Layout_dashboard.css
+++ b/css/Layout_dashboard.css
@@ -1,10 +1,10 @@
 /* Position text in the middle of the page/image */
 .Information {
-  background-color: rgba(255,255,255 1.0)
+  background-color: rgba(255,255,255 1.0);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-color: initial;
-  position: absolute;
+  position: relative;
   top: 2%;
   z-index: 1;
   padding: 55px;
